--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -89,7 +89,7 @@ And we will release code and dataset.
 
 \input{sections/5-discussion}
 
-\bibliography{egbib,360flow}
+\bibliography{360flow} % egbib
 
 \input{sections/supplementary}
 
