--- a/doc/paper_draft/sections/supplementary.tex
+++ b/doc/paper_draft/sections/supplementary.tex
@@ -69,7 +69,7 @@ The rasterization render method OpenGL used to synthesize the ground truth optic
 The equirectangular optical flow generation algorithm introduction in \cref{sec:app:panoof}.
 Few public indoor 3D datasets are hired to render the ground truth data.
 
-Although KITTI~\cite{Menze2018JPRS} or MPI Sintel~\cite{ButleWSB2012} pinhole image optical flow, etc.
+Although KITTI~\cite{MenzeHG2018} or MPI Sintel~\cite{ButleWSB2012} pinhole image optical flow, etc.
 
 The synthetic panoramic optical flow rendered with off-the-shelf OpenGL render pipeline and store in the ERP image.
 The input are textured 3D mesh and OpenGL's camera pose.
