--- a/doc/paper_draft/sections/2-relatedworks.tex
+++ b/doc/paper_draft/sections/2-relatedworks.tex
@@ -23,14 +23,14 @@ This method propose for self-supervised learn pathway.
 
 % 360 optical flow
 The CNN based panoramic optical methods
-\citet{artizzu2021omniflownet} and \citet{bhandari2020revisiting}
+\citet{ArtizZAD2021} and \citet{BhandZY2021}
 
 
 \subsection{Panoramic Image Processing}
 
 % applications
 Panoramic image have been used on 
-depth esitmation\cite{wang2020360sd}, room layout etimation \cite{wang2021led2, tran2021sslayout360}, Semantic segmentation \cite{yang2021capturing}, render \cite{xu2021layout}, etc.
+depth esitmation\cite{WangSTCS2020}, room layout etimation \cite{WangYSCT2021, Tran2021}, Semantic segmentation \cite{YangZRHS2021}, render \cite{XuZXTG2021}, etc.
 % problem
 The panoramic image format converts the 3D scene to a 2D image with the non-linear project, but it introduces distortion in the 2D image, e.g. the equirectangular image format has larger distortion especially on the top and bottom of the image.
 
@@ -42,17 +42,17 @@ The panoramic image format converts the 3D scene to a 2D image with the non-line
 \cite{CoorsCG2018} use Gnomonic Projection to directly sample data from panoramic image, in this way they transform the omnidirectional sampling to perspective's.
 % icosahedron
 \cite{EderPVBF2019}\citet{EderSLF2020} Icosahedron is used to averagely sampling from the panoramic image, to make less overlap area between each sampling area.
-\citet{luo2019hexagonal}
-\citet{zhang2019orientation}
-\citet{lee2019spherephd}
+\citet{LuoZSX2019}
+\citet{ZhangLSC2019}
+\citet{LeeJYJY2019}
 
 % sovle with on CNN area
-\citet{gkitsas2020deep}
+\citet{GkitsZAZD2020}
 %% kernel transfrom 
-\citet{su2019kernel}
+\citet{SuG2019}
 %% rotation invariance 
-\citet{cohen2018spherical}
-\citet{jiang2018spherical}
+\citet{CohenGKW2018}
+\citet{JiangHKPMN2019}
 
 \subsection{Panoramic Datasets}
 
